# rust_web_server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
Client/: Cargo.toml
Client/.cargo/: config.toml
Client/src/: main.rs
Client/src/models/structs/: app.rs  cli.rs  gpu_decoder.rs  mod.rs  stream_decoder.rs
Server/: .gitignore  Cargo.toml  package-lock.json  package.json
Server/src/: App.tsx  main.rs
Server/src-tauri/src/: lib.rs
Server/src-tauri/src/models/structs/: app_core.rs  gpu_encoder.rs  http_message.rs  mod.rs  screen_capture.rs
Server/src/models/implementations/: graphics_capture_handler.rs  http_message_impl.rs  screen_capture_impl.rs
Server/src/models/structs/: gpu_encoder.rs  mod.rs  record_buffer.rs  rgba_pixel.rs  screen_capture.rs  stop_watch.rs
server_tauri/src/: App.tsx
server_tauri/src-tauri/: Cargo.toml  tauri.conf.json
server_tauri/src-tauri/src/: lib.rs
server_tauri/src-tauri/src/models/structs/: app.rs  app_core.rs  gpu_encoder.rs  mod.rs  screen_capture.rs
src/: main.rs
src/models/: mod.rs
src/models/implementations/: graphics_capture_handler.rs  http_message_impl.rs  mod.rs  screen_capture_impl.rs
src/models/structs/: http_message.rs  mod.rs  screen_capture.rs
