[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
openh264 = "0.9.0"
winit = "0.29.15"
pixels = "0.15.0"
rtp = "0.14.0"
webrtc-util = "0.12.0"
ffmpeg-next = "^8.0.0"
egui = "0.26.2"
egui-winit = "0.26.2"
egui-wgpu = "0.26.2"
clap = { version = "4.5", features = ["derive"] }